--- a/package.json
+++ b/package.json
@@ -8,15 +8,17 @@
     "@testing-library/jest-dom": "^5.16.1",
     "@testing-library/react": "^12.1.2",
     "@testing-library/user-event": "^13.5.0",
+    "add": "^2.0.6",
     "axios": "^0.21.0",
     "bootstrap": "^5.1.3",
+    "formik": "^2.2.5",
+    "imask": "^6.0.5",
     "react": "^17.0.2",
     "react-bootstrap": "^2.0.4",
     "react-cropper": "^2.1.8",
     "react-dom": "^17.0.2",
     "react-scripts": "5.0.0",
-    "formik": "^2.2.5",
-    "imask": "^6.0.5",
+    "yarn": "^1.22.17",
     "yup": "^0.32.6"
   },
   "scripts": {
