--- a/package.json
+++ b/package.json
@@ -5,18 +5,21 @@
   "dependencies": {
     "@clayui/modal": "^3.8.0",
     "@fortawesome/fontawesome-free": "^5.15.4",
+    "@material-ui/core": "^4.11.4",
     "@testing-library/jest-dom": "^5.16.1",
     "@testing-library/react": "^12.1.2",
     "@testing-library/user-event": "^13.5.0",
     "add": "^2.0.6",
     "axios": "^0.21.0",
     "bootstrap": "^5.1.3",
+    "date-fns": "^2.28.0",
     "formik": "^2.2.5",
     "imask": "^6.0.5",
     "react": "^17.0.2",
     "react-bootstrap": "^2.0.4",
     "react-cropper": "^2.1.8",
     "react-dom": "^17.0.2",
+    "react-input-mask": "^2.0.4",
     "react-scripts": "5.0.0",
     "yarn": "^1.22.17",
     "yup": "^0.32.6"
